@@ -107,6 +107,7 @@ int md_cert_is_valid_now(const md_cert_t *cert);
 int md_cert_has_expired(const md_cert_t *cert);
 int md_cert_covers_domain(md_cert_t *cert, const char *domain_name);
 int md_cert_covers_md(md_cert_t *cert, const struct md_t *md);
+int md_cert_must_staple(md_cert_t *cert);
 apr_time_t md_cert_get_not_after(md_cert_t *cert);
 apr_time_t md_cert_get_not_before(md_cert_t *cert);
 
